--- a/frontend-suchus/src/assets/style/Login.css
+++ b/frontend-suchus/src/assets/style/Login.css
@@ -1,7 +1,7 @@
 /* Estilos generales */
 .login-container{
   font-family: Arial, Helvetica, sans-serif;
-  background: #f2f2f2 url("../../media/OIP.jpg") no-repeat center center fixed;
+  background: #f2f2f2 url("/media/OIP.jpg") no-repeat center center fixed;
   background-size: cover;
   margin: 0;
   padding: 0;
