--- a/frontend-suchus/src/assets/style/CardProducto.css
+++ b/frontend-suchus/src/assets/style/CardProducto.css
@@ -7,7 +7,8 @@
 }
 
 .producto-card {
-  width: 220px;
+  width: 240px;
+  height: 340px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,8 +17,6 @@
   border-radius: 8px;
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-height: 450px;
-  overflow: hidden;
   text-align: center; /* Centra el texto */
 }
 
@@ -39,6 +38,10 @@
   margin: 10px 0;
   font-size: 16px;
   font-weight: 500;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .producto-acciones {
