--- a/frontend-suchus/src/assets/style/Home.css
+++ b/frontend-suchus/src/assets/style/Home.css
@@ -13,7 +13,9 @@
   width: 100%;
   background-color: #282c34;
   padding: 30px 20px;
+  position: relative; /* esto asegura que quede estático */
 }
+
 .header-inner {
   max-width: 1200px;
   margin: 0 auto;
@@ -63,7 +65,6 @@
 .home-menu {
   width: 100%;
   margin-top: 20px;
-  position: sticky;
   top: 0;
   background-color: #282c34;
   z-index: 1000;
