--- a/frontend-suchus/src/assets/style/Home.css
+++ b/frontend-suchus/src/assets/style/Home.css
@@ -12,8 +12,7 @@
 .home-header {
   width: 100%;
   background-color: #282c34;
-  padding: 30px 20px;
-  position: relative; /* esto asegura que quede estático */
+  padding: 30px 20px; /* esto asegura que quede estático */
 }
 
 .header-inner {
